force-app/main/default/src/objects/PJN_Object_Field_Contact_Info_Mapping__mdt/PJN_Object_Field_Contact_Info_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Object Field Contact Info Mapping</label>
    <pluralLabel>Object Field Contact Info Mappings</pluralLabel>
</CustomObject>