force-app/main/default/src/objects/PJN_Object_Field_Contact_Info_Mapping__mdt/fields/PJN_Contact_Info_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Contact_Info_Field_Name__c</fullName>
    <description>Field API Name from Contact Information</description>
    <label>Contact Info Field Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>