force-app/main/default/src/objects/PJN_Object_Field_Contact_Info_Mapping__mdt/fields/PJN_Contact_Info_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Contact_Info_Record_Type__c</fullName>
    <description>Contact Information Record Type Developer Name.</description>
    <label>Contact Info Record Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>