force-app/main/default/src/objects/PJN_Object_Field_Contact_Info_Mapping__mdt/fields/PJN_Contact_Info_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Contact_Info_Type__c</fullName>
    <description>Contact Information Field Type.</description>
    <label>Contact Info Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>