force-app/main/default/src/objects/PJN_Object_Field_Contact_Info_Mapping__mdt/fields/PJN_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Field_Name__c</fullName>
    <description>Field API name from Object Name field.</description>
    <label>Field Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>