force-app/main/default/src/objects/PJN_Object_Field_Contact_Info_Mapping__mdt/fields/PJN_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Object_Name__c</fullName>
    <description>Object API name used to map from/to Contact Information.</description>
    <label>Object Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>